--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
 	<maven.compiler.target>11</maven.compiler.target>
 	<maven.compiler.source>11</maven.compiler.source>
   </properties>
+	<properties>
+   <java.version>11</java.version>
+</properties>
   <dependencies>
 <dependency>
 <groupId>org.json</groupId>
