--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
       <id>deploymentRepo</id>
       <name>Nexus Repository</name>
       <url>http://192.168.56.2:8081/repository/maven-releases/</url>
+	    <writePolicy>ALLOW_WRITE</writePolicy>
     </repository>
   </distributionManagement>
   
